Avance Alta de Activo

--- a/UI/Views/Activo/Index.cshtml
+++ b/UI/Views/Activo/Index.cshtml
@@ -83,3 +83,14 @@
     </div>
 
 </main>
+
+
+@section scripts {
+    <script>
+
+        window.onload = function () {
+            document.getElementById('activos-collapse').className = 'show';
+            document.getElementById('Activos').className = 'btn-activo';
+        };
+    </script>
+}
