--- a/UI/Views/Activo/Index.cshtml
+++ b/UI/Views/Activo/Index.cshtml
@@ -3,12 +3,12 @@
 
 @{
     Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
-    ViewBag.Title = Traducciones["Idiomas"].Texto;
+    ViewBag.Title = Traducciones["Dispositivos"].Texto;
 }
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">@Traducciones["Activos"].Texto</h1>
+        <h1 class="h2">@Traducciones["Dispositivos"].Texto</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
                 @using (Html.BeginForm())
@@ -27,78 +27,129 @@
         </div>
     </div>
     <div class="container-fluid">
-        <table class="table">
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Id)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Tipo)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Marca)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Modelo)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Nombre)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.FechaCompra)
-                </th>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Id)
+                    </th>
+                    <th>
+                        @Traducciones["Tipo"].Texto
+                    </th>
+                    <th>
+                        @Traducciones["Marca"].Texto
+                    </th>
+                    <th>
+                        @Traducciones["Modelo"].Texto
+                    </th>
+                    <th>
+                        @Traducciones["Nombre"].Texto
+                    </th>
+                    <th>
+                        @Traducciones["FechaCompra"].Texto
+                    </th>
 
-                <th>
-                    @Html.DisplayNameFor(model => model.CicloDeVida)
-                </th>
-                <th></th>
-            </tr>
+                    <th>
+                        @Traducciones["CicloDeVida"].Texto
+                    </th>
+                    <th></th>
+                </tr>
+                </thead>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Id)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Tipo.Descripcion)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Marca.Descripcion)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Modelo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Nombre)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FechaCompra)
+                        </td>
 
-            @foreach (var item in Model)
-            {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tipo.Descripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Marca.Descripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Modelo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaCompra)
-            </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CicloDeVida)
+                        </td>
+                        <td>
 
-            <td>
-                @Html.DisplayFor(modelItem => item.CicloDeVida)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
-        </tr>
-            }
+                            <a href="@Url.Action("Details", "Activo", new {id=item.Id })"><i class="fa fa-eye"></i></a>&ensp;&ensp;
+                            <a href="@Url.Action("Edit", "Activo", new {id=item.Id })"><i class="fa fa-edit"></i></a>&ensp;&ensp;          
+                            <a href="#" onclick="Confirmar('@item.Id','@item.Nombre')"><i class="fa fa-trash"></i></a>
+                        </td>
+                    </tr>
+                }
 
         </table>
     </div>
 
 </main>
 
+<!-- Modal Confirmar Eliminación-->
+<div class="modal fade" id="Confirmar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Eliminar </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Está seguro que desea Eliminar el Dispositivo <b id="nombre_act"></b> ?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary" onclick="Eliminar()">Confirmar</button>
+            </div>
+        </div>
+    </div>
+</div>
 
-@section scripts {
-    <script>
+@*Para eliminar campo oculto para el Id*@
 
-        window.onload = function () {
-            document.getElementById('activos-collapse').className = 'show';
-            document.getElementById('Activos').className = 'btn-activo';
-        };
-    </script>
-}
+<input type="hidden" id="IdActivo" />
+
+<script>
+
+    window.onload = function () {
+        document.getElementById('activos-collapse').className = 'show';
+        document.getElementById('Activos').className = 'btn-activo';
+    };
+</script>
+
+<script>
+    var Confirmar = function (id,nombre) {
+
+        $("#IdActivo").val(id);
+        $("#nombre_act").text(nombre);
+        $("#Confirmar").modal('show');
+    }
+
+    var Eliminar = function () {
+
+        var Id = $('#IdActivo').val();
+
+        $.ajax({
+
+            type: "POST",
+            url: "/Activo/Delete",
+            data: { id: Id },
+            success: function (response) {
+                if (response.success) {
+                    $("#Confirmar").modal("hide");
+                    location.reload();
+
+                } else { }
+            }
+        })
+    }
+
+</script>
